# sutrakrit-gita

./: .gitignore  LICENSE  LICENSE-DATA  README.md  pyproject.toml
data/: bg_mula.json  lists_graph.json
data/external_translations/: supersite_bg2.json
data/fidelity_reports/: bg2_fidelity_report.json
data/parser_eval/: REVIEW_SHEET.md  REVIEW_SHEET_meanings.md  curated_glosses.json  curated_glosses_extension_top300.json  glosses_production.json  mw_gloss_cache.json
docs/: ARCHITECTURE.md
panel-data/commentaries/: bg_anandgiri.jsonl  (+7 more)
rendered/: bg_10_1.json  bg_10_10.json  bg_10_11.json  bg_10_12.json  bg_10_13.json  bg_10_14.json  bg_10_15.json  bg_10_16.json  bg_10_17.json  bg_10_18.json  bg_10_19.json  bg_10_2.json  bg_10_20.json  bg_10_21.json  bg_10_22.json  bg_10_23.json  bg_10_24.json  bg_10_25.json  bg_10_26.json  bg_10_27.json  bg_10_28.json  bg_10_29.json  bg_10_3.json  bg_10_30.json  bg_10_31.json  bg_10_32.json  bg_10_33.json  bg_10_34.json  bg_10_35.json  bg_10_36.json  bg_10_37.json  bg_10_38.json  bg_10_39.json  bg_10_4.json  bg_10_40.json  bg_10_41.json  bg_10_42.json  bg_10_5.json  bg_10_6.json  bg_10_7.json  (+663 more)
schema/: example-bg-2-55.json  per-verse-object.schema.json
scripts/: add_devanagari_surface.py  build_lemma_index.py  build_meaning_review_sheet.py  build_theme_list_index.py  fidelity_benchmark.py  merge_batch_results.py  merge_byt5_into_rendered.py  merge_doctrinal_renderings.py  merge_senses_into_rendered.py  merge_translations_into_verses.py  parser_eval_harness.py  prepare_summary_batches.py  prepare_translation_batches.py  render_all.py  render_verse.py  repair_qmark_artifacts.py  validate_rendered.py
substrate/: __init__.py  pragmatics.py  prosody.py  reading_summaries.py  sense_extraction.py  sutrakrit.py  sutrakrit_unified_findings.json  sutrakrit_unified_findings.md  sutrakrit_unified_findings.py  tilak_eval.py  tilak_findings.json
tests/: test_schema_compliance.py
(+1472 files in other folders)
